<resources>
    <string name="app_name">HOMMY</string>
    <string name="user">Username</string>
    <string name="psw">Password</string>
    <string name="logo">hommy_logo</string>
    <string name="login">Login</string>
    <string name="register">or Create an Account here!</string>
    <string name="join">Join Game</string>
    <string name="profile">Profile</string>
    <string name="ranking">Ranking</string>
    <string name="logout">Logout</string>
    <string name="welcome">Hello %s!</string>
    <string name="welcomeP">~ %s ~</string>
    <string name="game_over">Game Over!</string>
    <string name="y_score">Your Final Score:</string>
    <string name="score">---- %s ----</string>
    <string name="new_game">New Game</string>
    <string name="information">Here you can find your information:</string>
    <string name="user_id">User ID:</string>
    <string name="birthdate">Birth Date:</string>
    <string name="genre">Genre:</string>
    <string name="most_played_category">Most Played\nCategory:</string>
    <string name="challenges_won">Challenges\nwon:</string>
    <string name="birthdate_text">%s %s %s</string>
    <string name="categories">%s (%d)</string>
    <string name="categories_text">Choose a category:</string>
    <string name="lobby_text1">Press the button when everyone is ready!</string>
    <string name="lobby_text2">Wait for the other players!</string>
    <string name="turn_text">%s\nWatch the screen to know when it\'s your turn!</string>
    <string name="voice_hz">Voice HZ Detector</string>
    <string name="dncstp">Dance and Stop</string>
    <string name="feedback_text">Did you enjoyed the challenge?\nGive us your feedback!</string>
    <string name="feedback_support">Thanks for your support!</string>
    <string name="fitness">Fitness Challenge:</string>
    <string name="voice">Voice Hz Detector:</string>
    <string name="dancestop">Dance and stop:</string>
    <string name="musictrivia">Music Trivia Challenge:</string>
    <string name="hub_ip">Hub IP:</string>
    <string name="port">Port:</string>
    <string name="settings">Settings</string>
    <string name="danceinfo">The rules are simple: Dance when the music is on or just stop!</string>

</resources>
