<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".WelcomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/settings_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|center_horizontal"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/settings" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/join_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:text="@string/join"
            android:textColor="#fff" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:text="@string/profile"
            android:textColor="#fff" />

        <Button
            android:id="@+id/ranking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:text="@string/ranking"
            android:textColor="#fff" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_button"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/logout"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>