<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.lorry.login_registerform.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/psw"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/psw"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/login_card"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_psw"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/lightGreen"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/login_card"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/register_text"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/register" />


</RelativeLayout>
