<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/welcome_lay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcome_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/cinzel"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_lay"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/information"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:paddingStart="25dp"
            android:text="@string/user_id"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/birtdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="25dp"
            android:text="@string/birthdate"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/birthdate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="25dp"
            android:text="@string/genre"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="25dp"
            android:text="@string/challenges_won"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/won_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ranking_back_button"
            android:layout_width="219dp"
            android:layout_height="64dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/rounded_button"
            android:text="Back"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>